Finish Third screen

--- a/app/globals.css
+++ b/app/globals.css
@@ -63,7 +63,19 @@
     transform: translateZ(0) rotate(360deg);
     }
   }
-}
+  --animate-marquee-left: marquee-left var(--duration, 30s) linear infinite;
+  --animate-marquee-right: marquee-right var(--duration, 30s) linear infinite
+;
+  @keyframes marquee-left {
+  from {
+    transform: translateX(0);}
+  to {
+    transform: translateX(calc(-100% - var(--gap)));}}
+  @keyframes marquee-right {
+  from {
+    transform: translateX(calc(-100% - var(--gap)));}
+  to {
+    transform: translateX(0);}}}
 
 :root {
   --radius: 0.625rem;
