--- a/app/globals.css
+++ b/app/globals.css
@@ -75,7 +75,17 @@
   from {
     transform: translateX(calc(-100% - var(--gap)));}
   to {
-    transform: translateX(0);}}}
+    transform: translateX(0);}}
+  --animate-meteor: meteor 5s linear infinite;
+  @keyframes meteor {
+  0% {
+    transform: rotate(var(--angle)) translateX(0);
+    opacity: 1;}
+  70% {
+    opacity: 1;}
+  100% {
+    transform: rotate(var(--angle)) translateX(-500px);
+    opacity: 0;}}}
 
 :root {
   --radius: 0.625rem;
